# ChangeLog for dev-libs/ocl-icd
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/ocl-icd/ChangeLog,v 1.1 2015/03/17 02:16:41 patrick Exp $

*ocl-icd-2.1.3 (17 Mar 2015)

  17 Mar 2015; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +ocl-icd-2.1.3.ebuild:
  Initial commit, ebuild borrowed from anyc overlay with minor cleanups