@@ -1,4 +1,6 @@
 DIST ocl-icd-2.1.3.tar.gz 419083 SHA256 8338c6ae5cb7a9b34dfe79922f5e32c4f78c535a2217321dae842f72e0a2b175 SHA512 5d0704bed8a664950131c985fc32ffe5e078874945642417122df79c66bad804307192db49a561330268664ceb59756b268cf52201b809398efe58c85f823ad3 WHIRLPOOL f2757e00dcd9d484b1536ebb6b776bf5b54cd3e13cfa1b56fc95ef1e71f3db36bdb4ff996b2ddfb18d63082ebfdf743b9aeb41ed76910020724cfde7839e741b
+DIST ocl-icd-2.2.3.tar.gz 446966 SHA256 93a5ac3b23fb10731cc9e6406a58f7a21825562877787ed08c3a41f08b504d0c SHA512 da890da32cd61e42f610df472ac651d47edb1b014d98c25a778551fe6973bdb47753417b2eeab220a07f2862468845e3ac31a2e9631eac5eed05153f09da2cb9 WHIRLPOOL 1025d9b10d0140777d50abef5049df033b5a3f405807997eef3c3d88c7d4c1bd568316a20a40f936eb253da5b473aedbc764702bf5145c6c4203d85b6b420239
 EBUILD ocl-icd-2.1.3.ebuild 896 SHA256 74cb9c40df09ab1748f5cca44bf7f6bb960b03760192ed085206d5055d58ace3 SHA512 4369190cf46465eff620c9f1fecf5ea314efc481f5a24333046a5ba8f2c0bb1cdd924ab7e19bc891cd1e6a3b280d7658cd0fb5d3a0c65f31382410a085a73245 WHIRLPOOL 7d75100a36f8f60cd6722954115b4d84f6b659e48b1be5358f375c543e58acb42eb07cd669a31571c688e314e4133a4b9ff3b298a0d27b0e82a92b7bbda0e8bf
-MISC ChangeLog 398 SHA256 68d4602d6e34d2096aafc3d4e01c550fc94c4ad4bff0188843daaa1dd0bce610 SHA512 14f2ee3f54b578a42c3c238862dba2ea703d03bfcf251574b398a7f3819b1f51625ae6d265b07a6d562fb69a2091b7af596f36d45159ed9b43426c945709b700 WHIRLPOOL d0815c838d30cf51645ad1f34e9ff2c178d3d46731b40b173c6d312e2b2bb247bfdbc5a1c07e81ef4123f2674eb96d0e60e03457352f4c931287f5883fc3c086
+EBUILD ocl-icd-2.2.3.ebuild 895 SHA256 2a65c8c870b8a85d9d2d1863fcaecf43c71b1dc025505075df978d30d24b7353 SHA512 217db1d7eef82a9d41cd400a6e10c9a33c904faa108f92db87f9f1158748796b09ac49968565d2031279277bd1fb612cc4f89af7b964eca5930924b46e62b791 WHIRLPOOL 2148816a80d4a7a752d91e58d2eab2d90710314a75eccb37827eb683f85421e1be6e04c40b7079c1aabfd83411ba530af771a00de43da226f59f0f36c8bc0b67
+MISC ChangeLog 509 SHA256 0c72a08b4bdd3ccc757a48f0509f9addd8ddceaf4d772c711a3fa0dfe237cbbf SHA512 1e553281cd9561fd6d852acf78636e87924b7360087fbc653ade7100693f95ff178c6979f61f438feb9dbc56faa884a9d62064edecc9f007dd8d65450c28c7cc WHIRLPOOL 73bbc8346e9bde1b2bf7fea2e2dfa505eade84adedbcc3dd09132aa772546563953096fb5e811f1d1490354f73549feaed31e66fbb6f642ae0345012a4a34c20
 MISC metadata.xml 239 SHA256 57c79f6c1b1b06b8d90265f1cc0affe89b5548b63e811f0313bfb2a0a0aa201a SHA512 1898d4e8bb4f02ffdad555a095ee76f934bd6ee1f914564eac1932f0dd96f26a52f47047324ed0a81009516a84bf72e1b10922fa751f322abf17517f84f62156 WHIRLPOOL 7375ace29b0d9c7e945e141c09b70c79599780bc9d3478e59fbc85dc4330aeda6bf2bb54fde24d25feb181f88618e11e022a90674d1f26ff9ef692bd698ff754
